Problem with the background of the navigation bar on mobile devices resolved

--- a/styles/main.css
+++ b/styles/main.css
@@ -479,9 +479,10 @@ a div, span {
   .nav-bar {
     flex-direction: row;
     width: 100%;
-    height: 100px;
+    height: 70px;
     left: 0;
     top: -7px;
+    background-color: #F7F7F7;
   }
 }
 .nav-bar-item {
